lythrum/apps/media/arr/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_RADARR}.${DOMAIN_INTERNAL}`)
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.${DOMAIN_TAILSCALE}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_RADARR}.${DOMAIN_INTERNAL}`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: traefik
      services:
        - name: radarr
          port: web
    - kind: Rule
      match: "Host(`${SUBDOMAIN_RADARR}.${DOMAIN_INTERNAL}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - namespace: authentik
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
  tls:
    secretName: radarr-tls
